<?xml version="1.0" encoding="utf-8"?>

   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" 
      android:layout_height="match_parent" 
      android:orientation="horizontal">
   <ScrollView 
   android:layout_width="wrap_content" 
   android:layout_height="match_parent">   
      <TableLayout android:id="@+id/tableLayout" 
         android:layout_width="200dp" 
         android:layout_height="match_parent" 
         android:layout_margin="10dp" android:stretchColumns="1">
          
         <TableRow android:orientation="horizontal"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content" 
               android:text="@string/xRotation" 
               android:gravity="right|center_vertical"/>
            <SeekBar android:id="@+id/xSeekBar"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" android:max="5" 
               android:paddingLeft="10dp" android:paddingRight="10dp"/>
         </TableRow>
         <TableRow android:orientation="horizontal"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content" 
               android:text="@string/yRotation" 
               android:gravity="right|center_vertical"/>
            <SeekBar android:id="@+id/ySeekBar"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" android:max="5" 
               android:paddingLeft="10dp" android:paddingRight="10dp"/>
         </TableRow>
         <TableRow android:orientation="horizontal"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content" 
               android:text="@string/zRotation" 
               android:gravity="right|center_vertical"/>            
            <SeekBar android:id="@+id/zSeekBar"
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content" android:max="5" 
               android:paddingLeft="10dp" android:paddingRight="10dp"/>
         </TableRow>
         <TableRow android:layout_width="match_parent"
             android:layout_height="wrap_content" >
            <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="right|center_vertical"
               android:text="@string/size" />
            <SeekBar android:id="@+id/sizeSeekBar"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:max="86016"
               android:paddingLeft="10dp"
               android:paddingRight="10dp" />             
         </TableRow>
         <TableRow>
            <LinearLayout android:layout_width="match_parent"
               android:layout_height="4dp" 
               android:background="@android:color/darker_gray"
               android:layout_span="2" />
         </TableRow>
         <TableRow>
            <RadioGroup android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" android:layout_span="2">
               <RadioButton android:id="@+id/radioCube"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/cube" android:checked="true"/>
               <RadioButton android:id="@+id/radioPyramid"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/pyramid"/>
               <RadioButton android:id="@+id/radioPrism"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/rectprism"/>
            </RadioGroup>          
         </TableRow>
         <TableRow>
            <LinearLayout android:layout_width="match_parent"
               android:layout_height="4dp" 
               android:background="@android:color/darker_gray"
               android:layout_span="2" />
         </TableRow>
         <TableRow>
            <RadioGroup android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" android:layout_span="2">
               <RadioButton android:id="@+id/radioMulti"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/multi" android:checked="true"/>
               <RadioButton android:id="@+id/radioRed"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/red"/>
               <RadioButton android:id="@+id/radioBlue"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/blue"/>
               <RadioButton android:id="@+id/radioGreen"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/green"/>
            </RadioGroup>          
         </TableRow>
      </TableLayout>
   </ScrollView>
      <android.opengl.GLSurfaceView android:id="@+id/glSurfaceView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
   </LinearLayout>

    